# CVToolBox

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CVToolBox.sln  CVToolBox.vcxproj  CVToolBox.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  data.csv  example.vcxproj  example.vcxproj.filters  main.c  main.vcxproj  main.vcxproj.filters  queueExample.c  stringConvert.c  todo.md  todo.txt
docs/: BinaryTree.md  PVToolBox.md  perceptron.md
examples/: bTreesExample.c  csvConversionExample.c  perceptronExample2.c  queueExample.c  stringConvert.c  test.c
examples/collections/: collectionsExample.c
examples/collections/hashmap/: hashmaps.c
examples/data/csv/: random_temps.csv  scam_messages.csv
examples/data/random/: randomTemps.py
include/: bintree.h  calclib.h  collections.h  csv.h  hashMap.h  hmap.h  linkedList.h  llist.h  perceptron.h  queue.h  tmatch.h  typematch.h
lib/: CVToolBox.lib  bayes.h  collections.h  perceptron.h  perceptronTest.c
lib/examples/: perceptronExample.c
lib/perceptron/: perceptron.h
src/: bintree.c  calclib.c  csv.c  hmap.c  llist.c  perceptron.c  queue.c  tmatch.c
